# web-axum

./: .env  .gitignore  Cargo.toml  Makefile  README.md
migrations/: 20240712_init_up.sql
src/: app_error.rs  constants.rs  file.rs  lib.rs  main.rs  model.rs
