[package]
name = "rust-axum-with-vim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = { version = "0.7.5", features = ["multipart"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
sqlx = { version = "0.7.4", features = [
    "runtime-async-std",
    "sqlite",
    "chrono",
    "uuid",
] }
chrono = { version = "0.4.38", features = ["serde"] }
argon2 = { version = "0.6.0-pre.0" }
rand_core = { version = "0.6.4", features = ["std"] }
calamine = { version = "0.25.0", features = ["dates"] }
validator = "0.18.1"
validator_derive = "0.18.1"
